kubernetes/lldap/prod-d1/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ldaps-route
  namespace: lldap
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - ldaps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: lldap-service
          port: 3890 
  tls:
    passthrough: false
    secretName: lldap-ingressroute-certificate  # Cert from cert-manager
