kubernetes/lldap/prod-d1/pgdb-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-operator
  namespace: lldap
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: lldap-cluster  # Ensure this matches your cluster's name
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system # Namespace where the operator is deployed
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg # Matches the Operator pod
      ports:
        - port: 8000  # CNPG Operator API
        - port: 5432  # PostgreSQL default port
